--- a/wtchat-ui/public/index.html
+++ b/wtchat-ui/public/index.html
@@ -8,7 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+
+    <title>WtChat</title>
   </head>
   <body>
     <div id="root"></div>
